--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -94,7 +94,7 @@ data:
     POD_REGEX: '.*'
     NAMESPACES: ''
     SCRIPTING_ENV: '{}'
-    SCRIPTING_SCRIPTS: '[]'
+    SCRIPTING_SCRIPTS: '{}'
     AUTH_ENABLED: ''
     AUTH_APPROVED_EMAILS: ''
     AUTH_APPROVED_DOMAINS: ''
@@ -161,27 +161,27 @@ metadata:
     app.kubernetes.io/version: "50.4"
     app.kubernetes.io/managed-by: Helm
   annotations:
-  name: kubeshark-self-secrets-role
+  name: kubeshark-self-config-role
   namespace: default
 rules:
   - apiGroups:
-      - "v1"
       - ""
+      - v1
     resourceNames:
       - kubeshark-secret
+      - kubeshark-config-map
     resources:
       - secrets
+      - configmaps
     verbs:
       - get
       - watch
       - update
-      - patch
 ---
 # Source: kubeshark/templates/03-cluster-role-binding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: kubeshark-self-secrets-role-binding
   labels:
     helm.sh/chart: kubeshark-50.4
     app.kubernetes.io/name: kubeshark
@@ -189,15 +189,16 @@ metadata:
     app.kubernetes.io/version: "50.4"
     app.kubernetes.io/managed-by: Helm
   annotations:
+  name: kubeshark-self-config-role-binding
   namespace: default
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: kubeshark-self-config-role
 subjects:
   - kind: ServiceAccount
     name: kubeshark-service-account
     namespace: default
-roleRef:
-  kind: Role
-  name: kubeshark-self-secrets-role
-  apiGroup: rbac.authorization.k8s.io
 ---
 # Source: kubeshark/templates/05-hub-service.yaml
 apiVersion: v1
@@ -288,13 +289,21 @@ spec:
             - -port
             - '8897'
             - -servicemesh
-            - -tls
             - -procfs
             - /hostproc
             
           image: 'docker.io/kubeshark/worker:latest'
           imagePullPolicy: Always
-          name: kubeshark-worker-daemon-set
+          name: sniffer
+          env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
           envFrom:
             - secretRef:
                 name: kubeshark-secret
@@ -313,7 +322,6 @@ spec:
                 - SYS_ADMIN
                 - SYS_PTRACE
                 - DAC_OVERRIDE
-                - SYS_RESOURCE
                 - SYS_MODULE
               drop:
                 - ALL
@@ -331,6 +339,50 @@ spec:
             initialDelaySeconds: 5
             tcpSocket:
               port: 8897
+          volumeMounts:
+            - mountPath: /hostproc
+              name: proc
+              readOnly: true
+            - mountPath: /sys
+              name: sys
+              readOnly: true
+        - command:
+            - ./tracer
+            - -procfs
+            - /hostproc
+            
+          image: 'docker.io/kubeshark/worker:latest'
+          imagePullPolicy: Always
+          name: tracer
+          env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          envFrom:
+            - secretRef:
+                name: kubeshark-secret
+          resources:
+            limits:
+              cpu: 750m
+              memory: 1Gi
+            requests:
+              cpu: 50m
+              memory: 50Mi
+          securityContext:
+            capabilities:
+              add:
+                - SYS_ADMIN
+                - SYS_PTRACE
+                - DAC_OVERRIDE
+                - SYS_RESOURCE
+                - SYS_MODULE
+              drop:
+                - ALL
           volumeMounts:
             - mountPath: /hostproc
               name: proc
@@ -368,8 +420,6 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubeshark-hub
-  namespace: default
   labels:
     app.kubeshark.co/app: hub
     helm.sh/chart: kubeshark-50.4
@@ -378,16 +428,27 @@ metadata:
     app.kubernetes.io/version: "50.4"
     app.kubernetes.io/managed-by: Helm
   annotations:
+  name: kubeshark-hub
+  namespace: default
 spec:
   replicas: 1  # Set the desired number of replicas
   selector:
     matchLabels:
       app.kubeshark.co/app: hub
+      helm.sh/chart: kubeshark-50.4
+      app.kubernetes.io/name: kubeshark
+      app.kubernetes.io/instance: kubeshark
+      app.kubernetes.io/version: "50.4"
+      app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: hub
-        sidecar.istio.io/inject: "false"
+        helm.sh/chart: kubeshark-50.4
+        app.kubernetes.io/name: kubeshark
+        app.kubernetes.io/instance: kubeshark
+        app.kubernetes.io/version: "50.4"
+        app.kubernetes.io/managed-by: Helm
     spec:
       dnsPolicy: ClusterFirstWithHostNet
       serviceAccountName: kubeshark-service-account
@@ -396,6 +457,15 @@ spec:
           command:
             - ./hub
             
+          env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
           envFrom:
             - configMapRef:
                 name: kubeshark-config-map
@@ -429,8 +499,6 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubeshark-front
-  namespace: default
   labels:
     app.kubeshark.co/app: front
     helm.sh/chart: kubeshark-50.4
@@ -439,15 +507,27 @@ metadata:
     app.kubernetes.io/version: "50.4"
     app.kubernetes.io/managed-by: Helm
   annotations:
+  name: kubeshark-front
+  namespace: default
 spec:
   replicas: 1  # Set the desired number of replicas
   selector:
     matchLabels:
       app.kubeshark.co/app: front
+      helm.sh/chart: kubeshark-50.4
+      app.kubernetes.io/name: kubeshark
+      app.kubernetes.io/instance: kubeshark
+      app.kubernetes.io/version: "50.4"
+      app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: front
+        helm.sh/chart: kubeshark-50.4
+        app.kubernetes.io/name: kubeshark
+        app.kubernetes.io/instance: kubeshark
+        app.kubernetes.io/version: "50.4"
+        app.kubernetes.io/managed-by: Helm
     spec:
       containers:
         - env:
