:sparkles: Use `emptyDir` as the default type of `data` volume

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -225,4 +225,7 @@ spec:
 {{- if .Values.tap.persistentstorage }}
           persistentVolumeClaim:
             claimName: kubeshark-persistent-volume-claim
+{{- else }}
+          emptyDir:
+            sizeLimit: {{ .Values.tap.storagelimit }}
 {{- end }}
