--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -286,8 +286,6 @@ spec:
             - ./worker
             - -i
             - any
-            - -port
-            - '8897'
             - -servicemesh
             - -procfs
             - /hostproc
@@ -309,8 +307,8 @@ spec:
                 name: kubeshark-secret
           resources:
             limits:
-              cpu: 750m
-              memory: 1Gi
+              cpu: 250m
+              memory: 333Mi
             requests:
               cpu: 50m
               memory: 50Mi
@@ -323,6 +321,47 @@ spec:
                 - SYS_PTRACE
                 - DAC_OVERRIDE
                 - SYS_MODULE
+              drop:
+                - ALL
+          volumeMounts:
+            - mountPath: /hostproc
+              name: proc
+              readOnly: true
+            - mountPath: /sys
+              name: sys
+              readOnly: true
+            - mountPath: /app/data
+              name: data
+        - command:
+            - ./worker
+            - -server-mode
+            - -port
+            - '8897'
+            
+          image: 'docker.io/kubeshark/worker:latest'
+          imagePullPolicy: Always
+          name: server
+          env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          envFrom:
+            - secretRef:
+                name: kubeshark-secret
+          resources:
+            limits:
+              cpu: 250m
+              memory: 333Mi
+            requests:
+              cpu: 50m
+              memory: 50Mi
+          securityContext:
+            capabilities:
               drop:
                 - ALL
           readinessProbe:
@@ -346,6 +385,8 @@ spec:
             - mountPath: /sys
               name: sys
               readOnly: true
+            - mountPath: /app/data
+              name: data
         - command:
             - ./tracer
             - -procfs
@@ -368,8 +409,8 @@ spec:
                 name: kubeshark-secret
           resources:
             limits:
-              cpu: 750m
-              memory: 1Gi
+              cpu: 250m
+              memory: 333Mi
             requests:
               cpu: 50m
               memory: 50Mi
@@ -380,7 +421,6 @@ spec:
                 - SYS_PTRACE
                 - DAC_OVERRIDE
                 - SYS_RESOURCE
-                - SYS_MODULE
               drop:
                 - ALL
           volumeMounts:
@@ -390,6 +430,8 @@ spec:
             - mountPath: /sys
               name: sys
               readOnly: true
+            - mountPath: /app/data
+              name: data
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       serviceAccountName: kubeshark-service-account
@@ -415,6 +457,9 @@ spec:
         - hostPath:
             path: /sys
           name: sys
+        - name: data
+          emptyDir:
+            sizeLimit: 200Mi
 ---
 # Source: kubeshark/templates/04-hub-deployment.yaml
 apiVersion: apps/v1
@@ -489,8 +534,8 @@ spec:
               port: 80
           resources:
             limits:
-              cpu: 750m
-              memory: 1Gi
+              cpu: 250m
+              memory: 333Mi
             requests:
               cpu: 50m
               memory: 50Mi
