Revert ":hammer: Separate the resources of each container in worker `DaemonSet`"
This reverts commit 6add6fb1ec33e95dbf46c2662dea98cd421f9fed.

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -25,31 +25,17 @@ tap:
   dryrun: false
   pcap: ""
   resources:
-    sniffer:
+    worker:
       limits:
-        cpu: 500m
-        memory: 500Mi
-      requests:
-        cpu: 50m
-        memory: 50Mi
-    server:
-      limits:
-        cpu: 500m
-        memory: 500Mi
-      requests:
-        cpu: 50m
-        memory: 50Mi
-    tracer:
-      limits:
-        cpu: 500m
-        memory: 500Mi
+        cpu: 750m
+        memory: 1Gi
       requests:
         cpu: 50m
         memory: 50Mi
     hub:
       limits:
-        cpu: 500m
-        memory: 500Mi
+        cpu: 750m
+        memory: 1Gi
       requests:
         cpu: 50m
         memory: 50Mi
