--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -30,6 +30,8 @@ spec:
             - ./worker
             - -i
             - any
+            - -port
+            - '{{ .Values.tap.proxy.worker.srvport }}'
             - -servicemesh
             - -procfs
             - /hostproc
@@ -76,56 +78,6 @@ spec:
                 - SYS_MODULE
               drop:
                 - ALL
-          volumeMounts:
-            - mountPath: /hostproc
-              name: proc
-              readOnly: true
-            - mountPath: /sys
-              name: sys
-              readOnly: true
-            - mountPath: /app/data
-              name: data
-        - command:
-            - ./worker
-            - -server-mode
-            - -port
-            - '{{ .Values.tap.proxy.worker.srvport }}'
-            {{ .Values.tap.debug | ternary "- -debug" "" }}
-          image: '{{ .Values.tap.docker.registry }}/worker:{{ .Values.tap.docker.tag }}'
-          imagePullPolicy: {{ .Values.tap.docker.imagepullpolicy }}
-          name: server
-          env:
-          - name: POD_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.name
-          - name: POD_NAMESPACE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.namespace
-          envFrom:
-            - secretRef:
-                name: kubeshark-secret
-        {{- if .Values.tap.debug }}
-          env:
-          - name: PROFILING_ENABLED
-            value: "true"
-          - name: PROFILING_DUMP_PATH
-            value: "pprof"
-          - name: PROFILING_INTERVAL_SECONDS
-            value: "60"
-        {{- end }}
-          resources:
-            limits:
-              cpu: {{ .Values.tap.resources.worker.limits.cpu }}
-              memory: {{ .Values.tap.resources.worker.limits.memory }}
-            requests:
-              cpu: {{ .Values.tap.resources.worker.requests.cpu }}
-              memory: {{ .Values.tap.resources.worker.requests.memory }}
-          securityContext:
-            capabilities:
-              drop:
-                - ALL
           readinessProbe:
             periodSeconds: 1
             failureThreshold: 3
@@ -147,8 +99,10 @@ spec:
             - mountPath: /sys
               name: sys
               readOnly: true
+          {{- if .Values.tap.persistentstorage }}
             - mountPath: /app/data
-              name: data
+              name: kubeshark-persistent-volume
+          {{- end }}
       {{- if .Values.tap.tls }}
         - command:
             - ./tracer
@@ -193,8 +147,10 @@ spec:
             - mountPath: /sys
               name: sys
               readOnly: true
+          {{- if .Values.tap.persistentstorage }}
             - mountPath: /app/data
-              name: data
+              name: kubeshark-persistent-volume
+          {{- end }}
       {{- end }}
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
@@ -221,8 +177,8 @@ spec:
         - hostPath:
             path: /sys
           name: sys
-        - name: data
 {{- if .Values.tap.persistentstorage }}
+        - name: kubeshark-persistent-volume
           persistentVolumeClaim:
             claimName: kubeshark-persistent-volume-claim
 {{- else }}
