:hammer: Add `NET_RAW` and `NET_ADMIN` capabilities to `tracer` container

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -125,6 +125,8 @@ spec:
           securityContext:
             capabilities:
               add:
+                - NET_RAW
+                - NET_ADMIN
                 - SYS_ADMIN
                 - SYS_PTRACE
                 - DAC_OVERRIDE
