:hammer: Use `if` for commands

--- a/helm-chart/templates/04-hub-deployment.yaml
+++ b/helm-chart/templates/04-hub-deployment.yaml
@@ -29,7 +29,9 @@ spec:
         - name: kubeshark-hub
           command:
             - ./hub
-            {{ .Values.tap.debug | ternary "- -debug" "" }}
+          {{- if .Values.tap.debug }}
+            - -debug
+          {{- end }}
           env:
           - name: POD_NAME
             valueFrom:
